# sfgc

./: CMakeLists.txt  LICENSE  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/sfgc/: sfgc.h
src/: sfgc.cpp
